codegen/generated/goud_engine.h

/**
 * Opaque identifier for an engine context.
 */
typedef struct GoudContextId {
    uint64_t _0;
} GoudContextId;
/**
 * FFI-safe arena statistics snapshot.
 */
typedef struct FfiArenaStats {
    /**
     * Number of bytes currently allocated within the arena.
     */
    uint64_t bytes_allocated;
    /**
     * Total byte capacity of the arena's backing storage.
     */
    uint64_t bytes_capacity;
    /**
     * Number of times the arena has been reset since creation.
     */
    uint64_t reset_count;
} FfiArenaStats;
/**
 * FFI-safe debugger configuration for context creation.
 */
typedef struct GoudDebuggerConfig {
    /**
     * Enables the debugger runtime for this context.
     */
    bool enabled;
    /**
     * Publishes local attach metadata for this route.
     */
    bool publish_local_attach;
    /**
     * Optional null-terminated UTF-8 route label.
     */
    const char *route_label;
} GoudDebuggerConfig;
/**
 * FFI-safe context configuration.
 */
typedef struct GoudContextConfig {
    /**
     * Debugger runtime settings.
     */
    struct GoudDebuggerConfig debugger;
} GoudContextConfig;
/**
 * Opaque handle to an `EngineConfig` on the heap.
 */
typedef void *EngineConfigHandle;
/**
 * FFI-compatible error code type.
 */
typedef int32_t GoudErrorCode;
/**
 * FFI-safe pool statistics snapshot.
 */
typedef struct FfiPoolStats {
    /**
     * Total number of slots in the pool.
     */
    uint32_t capacity;
    /**
     * Number of slots currently acquired (in use).
     */
    uint32_t active;
    /**
     * Number of slots currently available for acquisition.
     */
    uint32_t available;
    /**
     * Peak number of simultaneously active slots since pool creation.
     */
    uint32_t high_water_mark;
    /**
     * Cumulative number of successful acquire operations.
     */
    uint64_t total_acquires;
    /**
     * Cumulative number of successful release operations.
     */
    uint64_t total_releases;
} FfiPoolStats;
/**
 * Opaque texture handle for FFI.
 */
typedef uint64_t GoudTextureHandle;
/**
 * A single sprite command for batch rendering.
 */
typedef struct FfiSpriteCmd {
    /**
     * Texture handle from `goud_texture_load`.
     */
    GoudTextureHandle texture;
    /**
     * X position in screen-space pixels.
     */
    float x;
    /**
     * Y position in screen-space pixels.
     */
    float y;
    /**
     * Width of the sprite on screen.
     */
    float width;
    /**
     * Height of the sprite on screen.
     */
    float height;
    /**
     * Rotation in radians.
     */
    float rotation;
    /**
     * Source rectangle X offset in pixel coordinates.
     */
    float src_x;
    /**
     * Source rectangle Y offset in pixel coordinates.
     */
    float src_y;
    /**
     * Source rectangle width in pixel coordinates (0 = full texture width).
     */
    float src_w;
    /**
     * Source rectangle height in pixel coordinates (0 = full texture height).
     */
    float src_h;
    /**
     * Red color tint (1.0 = no tint).
     */
    float r;
    /**
     * Green color tint (1.0 = no tint).
     */
    float g;
    /**
     * Blue color tint (1.0 = no tint).
     */
    float b;
    /**
     * Alpha (opacity, 1.0 = fully opaque).
     */
    float a;
    /**
     * Z-layer for depth sorting (lower values drawn first).
     */
    int32_t z_layer;
    /**
     * Padding for alignment (set to 0).
     */
    int32_t _padding;
} FfiSpriteCmd;
/**
 * A single text command for batch rendering.
 */
typedef struct FfiTextCmd {
    /**
     * Font handle from `goud_font_load`.
     */
    uint64_t font_handle;
    /**
     * Null-terminated UTF-8 text string.
     */
    const char *text;
    /**
     * X position in screen-space pixels.
     */
    float x;
    /**
     * Y position in screen-space pixels.
     */
    float y;
    /**
     * Font size in pixels.
     */
    float font_size;
    /**
     * Text alignment: 0=Left, 1=Center, 2=Right.
     */
    uint8_t alignment;
    /**
     * Text direction: 0=Auto, 1=LTR, 2=RTL.
     */
    uint8_t direction;
    /**
     * Alignment padding.
     */
    uint16_t _pad0;
    /**
     * Maximum line width (0 = no wrap).
     */
    float max_width;
    /**
     * Line spacing multiplier (default 1.0).
     */
    float line_spacing;
    /**
     * Red color component.
     */
    float r;
    /**
     * Green color component.
     */
    float g;
    /**
     * Blue color component.
     */
    float b;
    /**
     * Alpha (opacity, 1.0 = fully opaque).
     */
    float a;
} FfiTextCmd;
/**
 * FFI-safe result type for returning success/failure status across the FFI boundary.
 */
typedef struct GoudResult {
    /**
     * The error code. `SUCCESS` (0) on success, error code on failure.
     */
    GoudErrorCode code;
    /**
     * True if the operation succeeded, false otherwise.
     */
    bool success;
} GoudResult;
/**
 * Creates a new engine context.
 */
struct GoudContextId goud_context_create(void);
/**
 * Creates a new engine context with the provided configuration.
 */
struct GoudContextId goud_context_create_with_config(const struct GoudContextConfig *config);
/**
 * Destroys an engine context, freeing all associated resources.
 */
bool goud_context_destroy(struct GoudContextId context_id);
/**
 * Checks if a context ID is valid.
 */
bool goud_context_is_valid(struct GoudContextId context_id);
/**
 * Creates a new scene with the given name.
 */
uint32_t goud_scene_create(struct GoudContextId context_id, const uint8_t *name_ptr, uint32_t name_len);
/**
 * Destroys a scene and frees its resources.
 */
GoudResult goud_scene_destroy(struct GoudContextId context_id, uint32_t scene_id);
/**
 * Looks up a scene by name, returning its ID.
 */
uint32_t goud_scene_get_by_name(struct GoudContextId context_id, const uint8_t *name_ptr, uint32_t name_len);
/**
 * Sets whether a scene is active.
 */
GoudResult goud_scene_set_active(struct GoudContextId context_id, uint32_t scene_id, bool active);
/**
 * Returns whether a scene is currently active.
 */
bool goud_scene_is_active(struct GoudContextId context_id, uint32_t scene_id);
/**
 * Returns the number of scenes in the context.
 */
uint32_t goud_scene_count(struct GoudContextId context_id);
/**
 * Sets the scene that subsequent entity/component FFI operations target.
 */
GoudResult goud_scene_set_current(struct GoudContextId context_id, uint32_t scene_id);
/**
 * Returns the ID of the scene currently targeted by entity/component
 */
uint32_t goud_scene_get_current(struct GoudContextId context_id);
/**
 * Starts a transition between two scenes.
 */
GoudResult goud_scene_transition_to(struct GoudContextId context_id, uint32_t from_scene, uint32_t to_scene, uint8_t transition_type, float duration_secs);
/**
 * Returns the progress of the active transition.
 */
float goud_scene_transition_progress(struct GoudContextId context_id);
/**
 * Returns whether a scene transition is currently active.
 */
bool goud_scene_transition_is_active(struct GoudContextId context_id);
/**
 * Advances the active transition by `delta_time` seconds.
 */
GoudResult goud_scene_transition_tick(struct GoudContextId context_id, float delta_time);
/**
 * Loads a scene from JSON.
 */
uint32_t goud_scene_load(struct GoudContextId context_id, const uint8_t *name_ptr, uint32_t name_len, const uint8_t *json_ptr, uint32_t json_len);
/**
 * Unloads a scene by name.
 */
GoudResult goud_scene_unload(struct GoudContextId context_id, const uint8_t *name_ptr, uint32_t name_len);
/* === Window === */

/**
 * Creates a new windowed context with the default native runtime.
 */
struct GoudContextId goud_window_create(uint32_t width, uint32_t height, const char *title);
/**
 * Destroys a windowed context and releases all resources.
 */
bool goud_window_destroy(struct GoudContextId context_id);
/**
 * Checks if the window should close.
 */
bool goud_window_should_close(struct GoudContextId context_id);
/**
 * Polls window events and updates input state.
 */
float goud_window_poll_events(struct GoudContextId context_id);
/**
 * Swaps the front and back buffers, presenting the rendered frame.
 */
void goud_window_swap_buffers(struct GoudContextId context_id);
/**
 * Gets the window size.
 */
bool goud_window_get_size(struct GoudContextId context_id, uint32_t *out_width, uint32_t *out_height);
/**
 * Requests a logical window resize.
 */
bool goud_window_set_size(struct GoudContextId context_id, uint32_t width, uint32_t height);
/**
 * Sets whether the window should close.
 */
void goud_window_set_should_close(struct GoudContextId context_id, bool should_close);
/**
 * Gets the delta time from the last frame.
 */
float goud_window_get_delta_time(struct GoudContextId context_id);
/**
 * Gets the framebuffer size.
 */
bool goud_window_get_framebuffer_size(struct GoudContextId context_id, uint32_t *out_width, uint32_t *out_height);
/**
 * Sets the fullscreen mode on the window.
 */
int32_t goud_window_set_fullscreen(struct GoudContextId context_id, uint32_t mode);
/**
 * Gets the current fullscreen mode.
 */
uint32_t goud_window_get_fullscreen(struct GoudContextId context_id);
/**
 * Toggles between windowed and borderless fullscreen.
 */
int32_t goud_window_toggle_fullscreen(struct GoudContextId context_id);
/**
 * Sets the viewport aspect ratio lock.
 */
int32_t goud_window_set_aspect_ratio_lock(struct GoudContextId context_id, uint32_t lock);
/**
 * Clears the window with the specified color.
 */
void goud_window_clear(struct GoudContextId context_id, float r, float g, float b, float a);
/* === Engine Config === */

/**
 * Creates a new default `EngineConfig` and returns an opaque handle.
 */
EngineConfigHandle goud_engine_config_create(void);
/**
 * Frees an `EngineConfig` handle without creating a context.
 */
void goud_engine_config_destroy(EngineConfigHandle handle);
/**
 * Sets the window title on an `EngineConfig`.
 */
bool goud_engine_config_set_title(EngineConfigHandle handle, const char *title);
/**
 * Sets the window size on an `EngineConfig`.
 */
bool goud_engine_config_set_size(EngineConfigHandle handle, uint32_t width, uint32_t height);
/**
 * Enables or disables vsync on an `EngineConfig`.
 */
bool goud_engine_config_set_vsync(EngineConfigHandle handle, bool enabled);
/**
 * Sets the fullscreen mode on an `EngineConfig`.
 */
bool goud_engine_config_set_fullscreen(EngineConfigHandle handle, uint32_t mode);
/**
 * Sets the aspect ratio lock on an `EngineConfig`.
 */
bool goud_engine_config_set_aspect_ratio_lock(EngineConfigHandle handle, uint32_t lock);
/**
 * Sets the target FPS on an `EngineConfig`.
 */
bool goud_engine_config_set_target_fps(EngineConfigHandle handle, uint32_t fps);
/**
 * Enables or disables the FPS overlay on an `EngineConfig`.
 */
bool goud_engine_config_set_fps_overlay(EngineConfigHandle handle, bool enabled);
/**
 * Enables or disables the physics debug visualization overlay for physics worlds
 */
bool goud_engine_config_set_physics_debug(EngineConfigHandle handle, bool enabled);
/**
 * Sets the 2D physics backend used when building providers from `EngineConfig`.
 */
bool goud_engine_config_set_physics_backend_2d(EngineConfigHandle handle, uint32_t backend);
/**
 * Sets the native render backend used when creating windowed engines.
 */
bool goud_engine_config_set_render_backend(EngineConfigHandle handle, uint32_t backend);
/**
 * Sets the native window backend used when creating windowed engines.
 */
bool goud_engine_config_set_window_backend(EngineConfigHandle handle, uint32_t backend);
/**
 * Configures debugger runtime startup for engines built from this `EngineConfig`.
 */
bool goud_engine_config_set_debugger(EngineConfigHandle handle, const struct GoudDebuggerConfig *debugger);
/**
 * Sets the fixed timestep step size in seconds on an `EngineConfig`.
 */
bool goud_engine_config_set_fixed_timestep(EngineConfigHandle handle, float step);
/**
 * Sets the maximum fixed steps per frame on an `EngineConfig`.
 */
bool goud_engine_config_set_max_fixed_steps(EngineConfigHandle handle, uint32_t max);
/**
 * Consumes an `EngineConfig` handle and creates a windowed engine context.
 */
struct GoudContextId goud_engine_create(EngineConfigHandle handle);
/**
 * Begins the fixed timestep accumulator for this frame.
 */
bool goud_fixed_timestep_begin(struct GoudContextId context_id);
/**
 * Consumes one fixed step from the accumulator.
 */
bool goud_fixed_timestep_step(struct GoudContextId context_id);
/**
 * Returns the interpolation alpha for render smoothing.
 */
float goud_fixed_timestep_alpha(struct GoudContextId context_id);
/**
 * Returns the configured fixed timestep step size in seconds.
 */
float goud_fixed_timestep_dt(struct GoudContextId context_id);
/**
 * Sets the fixed timestep step size at runtime for an existing context.
 */
bool goud_fixed_timestep_set(struct GoudContextId context_id, float step);
/**
 * Sets the maximum fixed steps per frame at runtime for an existing context.
 */
bool goud_fixed_timestep_set_max_steps(struct GoudContextId context_id, uint32_t max);