sdks/python/goudengine/generated/_ffi.py


class FfiPoolStats(ctypes.Structure):
    _fields_ = [
        ("capacity", ctypes.c_uint32),
        ("active", ctypes.c_uint32),
        ("available", ctypes.c_uint32),
        ("high_water_mark", ctypes.c_uint32),
        ("total_acquires", ctypes.c_uint64),
        ("total_releases", ctypes.c_uint64)
    ]

class FfiArenaStats(ctypes.Structure):
    _fields_ = [
        ("bytes_allocated", ctypes.c_uint64),
        ("bytes_capacity", ctypes.c_uint64),
        ("reset_count", ctypes.c_uint64)
    ]

class FfiSpriteCmd(ctypes.Structure):
    _fields_ = [
        ("texture", ctypes.c_uint64),
        ("x", ctypes.c_float),
        ("y", ctypes.c_float),
        ("width", ctypes.c_float),
        ("height", ctypes.c_float),
        ("rotation", ctypes.c_float),
        ("src_x", ctypes.c_float),
        ("src_y", ctypes.c_float),
        ("src_w", ctypes.c_float),
        ("src_h", ctypes.c_float),
        ("r", ctypes.c_float),
        ("g", ctypes.c_float),
        ("b", ctypes.c_float),
        ("a", ctypes.c_float),
        ("z_layer", ctypes.c_int32),
        ("_padding", ctypes.c_int32),
    ]

class FfiTextCmd(ctypes.Structure):
    _fields_ = [
        ("font_handle", ctypes.c_uint64),
        ("text", ctypes.c_char_p),
        ("x", ctypes.c_float),
        ("y", ctypes.c_float),
        ("font_size", ctypes.c_float),
        ("alignment", ctypes.c_uint8),
        ("direction", ctypes.c_uint8),
        ("_pad0", ctypes.c_uint16),
        ("max_width", ctypes.c_float),
        ("line_spacing", ctypes.c_float),
        ("r", ctypes.c_float),
        ("g", ctypes.c_float),
        ("b", ctypes.c_float),
        ("a", ctypes.c_float),
    ]

# ── Function signatures ──

def _setup():
    # engine_config
    _lib.goud_engine_config_create.argtypes = []
    _lib.goud_engine_config_create.restype = ctypes.c_void_p
    _lib.goud_engine_config_destroy.argtypes = [ctypes.c_void_p]
    _lib.goud_engine_config_destroy.restype = None
    _lib.goud_engine_config_set_title.argtypes = [ctypes.c_void_p, ctypes.c_char_p]
    _lib.goud_engine_config_set_title.restype = ctypes.c_bool
    _lib.goud_engine_config_set_size.argtypes = [ctypes.c_void_p, ctypes.c_uint32, ctypes.c_uint32]
    _lib.goud_engine_config_set_size.restype = ctypes.c_bool
    _lib.goud_engine_config_set_vsync.argtypes = [ctypes.c_void_p, ctypes.c_bool]
    _lib.goud_engine_config_set_vsync.restype = ctypes.c_bool
    _lib.goud_engine_config_set_fullscreen.argtypes = [ctypes.c_void_p, ctypes.c_uint32]
    _lib.goud_engine_config_set_fullscreen.restype = ctypes.c_bool
    _lib.goud_engine_config_set_target_fps.argtypes = [ctypes.c_void_p, ctypes.c_uint32]
    _lib.goud_engine_config_set_target_fps.restype = ctypes.c_bool
    _lib.goud_engine_config_set_fps_overlay.argtypes = [ctypes.c_void_p, ctypes.c_bool]
    _lib.goud_engine_config_set_fps_overlay.restype = ctypes.c_bool
    _lib.goud_engine_config_set_physics_debug.argtypes = [ctypes.c_void_p, ctypes.c_bool]
    _lib.goud_engine_config_set_physics_debug.restype = ctypes.c_bool
    _lib.goud_engine_config_set_physics_backend_2d.argtypes = [ctypes.c_void_p, ctypes.c_uint32]
    _lib.goud_engine_config_set_physics_backend_2d.restype = ctypes.c_bool
    _lib.goud_engine_config_set_render_backend.argtypes = [ctypes.c_void_p, ctypes.c_uint32]
    _lib.goud_engine_config_set_render_backend.restype = ctypes.c_bool
    _lib.goud_engine_config_set_window_backend.argtypes = [ctypes.c_void_p, ctypes.c_uint32]
    _lib.goud_engine_config_set_window_backend.restype = ctypes.c_bool
    _lib.goud_engine_config_set_debugger.argtypes = [ctypes.c_void_p, ctypes.POINTER(GoudDebuggerConfig)]
    _lib.goud_engine_config_set_debugger.restype = ctypes.c_bool
    _lib.goud_engine_config_set_aspect_ratio_lock.argtypes = [ctypes.c_void_p, ctypes.c_uint32]
    _lib.goud_engine_config_set_aspect_ratio_lock.restype = ctypes.c_bool
    _lib.goud_engine_config_set_fixed_timestep.argtypes = [ctypes.c_void_p, ctypes.c_float]
    _lib.goud_engine_config_set_fixed_timestep.restype = ctypes.c_bool
    _lib.goud_engine_config_set_max_fixed_steps.argtypes = [ctypes.c_void_p, ctypes.c_uint32]
    _lib.goud_engine_config_set_max_fixed_steps.restype = ctypes.c_bool
    _lib.goud_engine_create.argtypes = [ctypes.c_void_p]
    _lib.goud_engine_create.restype = GoudContextId

    # context
    _lib.goud_context_create.argtypes = []
    _lib.goud_context_create.restype = GoudContextId
    _lib.goud_context_create_with_config.argtypes = [ctypes.POINTER(GoudContextConfig)]
    _lib.goud_context_create_with_config.restype = GoudContextId
    _lib.goud_context_destroy.argtypes = [GoudContextId]
    _lib.goud_context_destroy.restype = ctypes.c_bool
    _lib.goud_context_is_valid.argtypes = [GoudContextId]
    _lib.goud_context_is_valid.restype = ctypes.c_bool

    # scene
    _lib.goud_scene_create.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint8), ctypes.c_uint32]
    _lib.goud_scene_create.restype = ctypes.c_uint32
    _lib.goud_scene_destroy.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_scene_destroy.restype = GoudResult
    _lib.goud_scene_get_by_name.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint8), ctypes.c_uint32]
    _lib.goud_scene_get_by_name.restype = ctypes.c_uint32
    _lib.goud_scene_load.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint8), ctypes.c_uint32, ctypes.POINTER(ctypes.c_uint8), ctypes.c_uint32]
    _lib.goud_scene_load.restype = ctypes.c_uint32
    _lib.goud_scene_unload.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint8), ctypes.c_uint32]
    _lib.goud_scene_unload.restype = GoudResult
    _lib.goud_scene_set_active.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_bool]
    _lib.goud_scene_set_active.restype = GoudResult
    _lib.goud_scene_is_active.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_scene_is_active.restype = ctypes.c_bool
    _lib.goud_scene_count.argtypes = [GoudContextId]
    _lib.goud_scene_count.restype = ctypes.c_uint32
    _lib.goud_scene_set_current.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_scene_set_current.restype = GoudResult
    _lib.goud_scene_get_current.argtypes = [GoudContextId]
    _lib.goud_scene_get_current.restype = ctypes.c_uint32
    _lib.goud_scene_transition_to.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_uint32, ctypes.c_uint8, ctypes.c_float]
    _lib.goud_scene_transition_to.restype = GoudResult
    _lib.goud_scene_transition_progress.argtypes = [GoudContextId]
    _lib.goud_scene_transition_progress.restype = ctypes.c_float
    _lib.goud_scene_transition_is_active.argtypes = [GoudContextId]
    _lib.goud_scene_transition_is_active.restype = ctypes.c_bool
    _lib.goud_scene_transition_tick.argtypes = [GoudContextId, ctypes.c_float]
    _lib.goud_scene_transition_tick.restype = GoudResult

    # window
    _lib.goud_window_create.argtypes = [ctypes.c_uint32, ctypes.c_uint32, ctypes.c_char_p]
    _lib.goud_window_create.restype = GoudContextId
    _lib.goud_window_destroy.argtypes = [GoudContextId]
    _lib.goud_window_destroy.restype = ctypes.c_bool
    _lib.goud_window_should_close.argtypes = [GoudContextId]
    _lib.goud_window_should_close.restype = ctypes.c_bool
    _lib.goud_window_set_should_close.argtypes = [GoudContextId, ctypes.c_bool]
    _lib.goud_window_set_should_close.restype = None
    _lib.goud_window_poll_events.argtypes = [GoudContextId]
    _lib.goud_window_poll_events.restype = ctypes.c_float
    _lib.goud_window_swap_buffers.argtypes = [GoudContextId]
    _lib.goud_window_swap_buffers.restype = None
    _lib.goud_window_clear.argtypes = [GoudContextId, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_window_clear.restype = None
    _lib.goud_window_get_delta_time.argtypes = [GoudContextId]
    _lib.goud_window_get_delta_time.restype = ctypes.c_float
    _lib.goud_window_get_size.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint32), ctypes.POINTER(ctypes.c_uint32)]
    _lib.goud_window_get_size.restype = ctypes.c_bool
    _lib.goud_window_set_size.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_uint32]
    _lib.goud_window_set_size.restype = ctypes.c_bool
    _lib.goud_window_get_framebuffer_size.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint32), ctypes.POINTER(ctypes.c_uint32)]
    _lib.goud_window_get_framebuffer_size.restype = ctypes.c_bool
    _lib.goud_window_set_fullscreen.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_window_set_fullscreen.restype = ctypes.c_int32
    _lib.goud_window_get_fullscreen.argtypes = [GoudContextId]
    _lib.goud_window_get_fullscreen.restype = ctypes.c_uint32
    _lib.goud_window_toggle_fullscreen.argtypes = [GoudContextId]
    _lib.goud_window_toggle_fullscreen.restype = ctypes.c_int32
    _lib.goud_window_set_aspect_ratio_lock.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_window_set_aspect_ratio_lock.restype = ctypes.c_int32
    _lib.goud_fixed_timestep_begin.argtypes = [GoudContextId]
    _lib.goud_fixed_timestep_begin.restype = ctypes.c_bool
    _lib.goud_fixed_timestep_step.argtypes = [GoudContextId]
    _lib.goud_fixed_timestep_step.restype = ctypes.c_bool
    _lib.goud_fixed_timestep_alpha.argtypes = [GoudContextId]
    _lib.goud_fixed_timestep_alpha.restype = ctypes.c_float
    _lib.goud_fixed_timestep_dt.argtypes = [GoudContextId]
    _lib.goud_fixed_timestep_dt.restype = ctypes.c_float
    _lib.goud_fixed_timestep_set.argtypes = [GoudContextId, ctypes.c_float]
    _lib.goud_fixed_timestep_set.restype = ctypes.c_bool
    _lib.goud_fixed_timestep_set_max_steps.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_fixed_timestep_set_max_steps.restype = ctypes.c_bool
